# agent-template

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CLAUDE_SESSION_STORE.zh-TW.md  TUTORIAL.zh-TW.md  TUTORIAL_ZH_TW.md
k8s/: api.yaml  configmap.yaml  secret.example.yaml  worker.yaml
src/agent_runtime/: __init__.py  config.py  db.py  domain.py  runtime.py  service.py
src/agent_runtime/a2a/: executor.py  server.py
src/agent_runtime/agent_sdk/: base.py  claude.py  mock.py
src/agent_runtime/api/: main.py  schemas.py
src/agent_runtime/graph/: builder.py  state.py
src/agent_runtime/persistence/: claude_session_store.py  langgraph.py
src/agent_runtime/tasks/: celery_app.py  jobs.py
tests/: test_a2a_official_sdk.py  test_api_boundaries.py  test_claude_session_store_conformance.py  test_config.py  test_mock_agent.py  test_session_table_guard.py
